--- a/ci-operator/config/red-hat-data-services/caikit-tgis-serving/red-hat-data-services-caikit-tgis-serving-rhods-1.32.yaml
+++ b/ci-operator/config/red-hat-data-services/caikit-tgis-serving/red-hat-data-services-caikit-tgis-serving-rhods-1.32.yaml
@@ -2,7 +2,7 @@ base_images:
   base:
     name: text-generation-inference
     namespace: red-hat-data-services
-    tag: rhods-1.32
+    tag: rhods-1.32-final
 build_root:
   image_stream_tag:
     name: release
