[KubeVirt UI] move to OCP 4.14
Signed-off-by: Oren Cohen <ocohen@redhat.com>

--- a/ci-operator/config/kubevirt-ui/kubevirt-plugin/kubevirt-ui-kubevirt-plugin-main.yaml
+++ b/ci-operator/config/kubevirt-ui/kubevirt-plugin/kubevirt-ui-kubevirt-plugin-main.yaml
@@ -31,8 +31,7 @@ tests:
       KUBEVIRT_PLUGIN_IMG_NAME: kubevirt-plugin
     env:
       BASE_DOMAIN: cnv-ci.syseng.devcluster.openshift.com
-      COMPUTE_NODE_TYPE: m4.2xlarge
-      ZONES_COUNT: "1"
+      SPOT_INSTANCES: "true"
     test:
     - as: tests
       cli: latest
