New Dockerfile Layout with correct image

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -11,7 +11,7 @@ build_root:
 images:
 - dockerfile_literal: |
     FROM src AS baselayer
-    FROM trillian
+    FROM trilliandb
     COPY --from=baselayer /usr/local/go /usr/local/go
     COPY --from=baselayer . .
     ENV PATH ="/usr/local/go/bin:${PATH}"
