Fixed test container

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -42,7 +42,7 @@ tests:
     go mod vendor
     ./integration/integration_test.sh
   container:
-    from: dbtest
+    from: src-db
 zz_generated_metadata:
   branch: release-next
   org: securesign
