Adding trillian db as input for docker literal

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -18,6 +18,11 @@ images:
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
+  from: src
+  inputs:
+    trilliandb:
+      as:
+      - trilliandb
   to: src-db
 releases:
   initial:
