Adding correct go version to docker file

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -3,10 +3,10 @@ base_images:
     name: trillian-db
     namespace: securesign
     tag: redhat-v1.5.2
-  ocp_builder_rhel-9-golang-1.20-openshift-4.14:
-    name: builder
-    namespace: ocp
-    tag: rhel-9-golang-1.20-openshift-4.14
+  golang:
+    name: release
+    namespace: openshift
+    tag: golang-1.20
 build_root:
   image_stream_tag:
     name: builder
@@ -14,7 +14,7 @@ build_root:
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
 - dockerfile_literal: |
-    FROM golang AS baselayer
+    FROM golang
     FROM trilliandb
     COPY --from=baselayer /usr/local/go /usr/local/go
     COPY --from=baselayer . .
