Using openshift release golang

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -3,7 +3,7 @@ base_images:
     name: trillian-db
     namespace: securesign
     tag: redhat-v1.5.2
-  golang:
+  openshift_release_golang-1.20:
     name: release
     namespace: openshift
     tag: golang-1.20
@@ -27,7 +27,7 @@ images:
     trilliandb:
       as:
       - trilliandb
-    ocp_builder_rhel-9-golang-1.20-openshift-4.14:
+    openshift_release_golang-1.20:
       as:
       - golang
   to: src-db
