--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -14,8 +14,8 @@ build_root:
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
 - dockerfile_literal: |
-    FROM src AS base
-    FROM golang As builder
+    FROM src
+    FROM golang AS builder
     FROM trilliandb
     COPY --from=builder /usr/local/go /usr/local/go
     COPY --from=builder . .
