--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -19,7 +19,7 @@ images:
     FROM trilliandb
     COPY --from=builder /usr/local/go /usr/local/go
     COPY --from=builder . .
-    COPY --from=base /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
+    COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
     WORKDIR /go/src/github.com/securesign/trillian
     ENV PATH ="/usr/local/go/bin:${PATH}"
     ENV MYSQL_USER=test
