--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -15,10 +15,10 @@ build_root:
 images:
 - dockerfile_literal: |
     FROM src
-    FROM golang AS builder
+    FROM golang AS golayer
     FROM trilliandb
-    COPY --from=builder /usr/local/go /usr/local/go
-    COPY --from=builder . .
+    COPY --from=golayer /usr/local/go /usr/local/go
+    COPY --from=golayer  . .
     COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
     WORKDIR /go/src/github.com/securesign/trillian
     ENV PATH ="/usr/local/go/bin:${PATH}"
