New layout with new layer names

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -13,19 +13,11 @@ build_root:
     namespace: ocp
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
-- dockerfile_literal: |
-    FROM src
-    FROM golang AS golayer
-    FROM trilliandb
-    COPY --from=golayer /usr/local/go /usr/local/go
-    COPY --from=golayer  . .
-    COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
-    WORKDIR /go/src/github.com/securesign/trillian
-    ENV PATH ="/usr/local/go/bin:${PATH}"
-    ENV MYSQL_USER=test
-    ENV MYSQL_PASSWORD=zaphod
-    ENV MYSQL_DATABASE=test
-  from: src
+- dockerfile_literal: "FROM src \nFROM golang AS golayer\nFROM trilliandb\nCOPY --from=golayer
+    /usr/local/go /usr/local/go\nCOPY --from=golayer  . .\nCOPY --from=src /go/src/github.com/securesign/trillian
+    /go/src/github.com/securesign/trillian\nWORKDIR /go/src/github.com/securesign/trillian\nENV
+    PATH =\"/usr/local/go/bin:${PATH}\"\nENV MYSQL_USER=test\nENV MYSQL_PASSWORD=zaphod\nENV
+    MYSQL_DATABASE=test\n"
   inputs:
     openshift_release_golang-1.19:
       as:
