New layout with new layer names

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -18,10 +18,9 @@ images:
     FROM golang AS golayer
     FROM trilliandb
     COPY --from=golayer /usr/local/go /usr/local/go
-    COPY --from=golayer  . .
     COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
     WORKDIR /go/src/github.com/securesign/trillian
-    ENV PATH ="/usr/local/go/bin:${PATH}"
+    ENV PATH ="/usr/local/go/bin:$PATH"
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
@@ -56,6 +55,8 @@ resources:
 tests:
 - as: integration
   commands: |
+    pwd
+    ls
     go mod vendor
     ./integration/integration_test.sh
   container:
