use updated installer configs

--- a/ci-operator/step-registry/addons-and-operators/addons-and-operators-workflow.yaml
+++ b/ci-operator/step-registry/addons-and-operators/addons-and-operators-workflow.yaml
@@ -1,8 +1,7 @@
 workflow:
-  as: addons-and-operators-aws-ipi
+  as: addons-and-operators
   steps:
     env:
-      API_HOST: stage
       PARALLEL: "true"
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
     post:
@@ -13,6 +12,6 @@ workflow:
     - ref: addon-install
     - ref: operator-install
   documentation: |-
-    This workflow installs an AWS IPI cluster.
+    This workflow installs a cluster based on CLUSTER1_CONFIG configuration.
     It then install required addons and operators on the cluster.
     After finish testing the cluster will be deprovisioned.
