--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-GA-production.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-GA-production.yaml
@@ -31,9 +31,7 @@ tests:
     cluster_profile: aws-managed-cspi-qe
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
-      API_HOST: production
-      COMPUTE_MACHINE_TYPE: g4dn.2xlarge
-      FIPS: "true"
+      CLUSTER1_CONFIG: name=rosa-rhods;platform=rosa;region=us-east-2;version=4.13;channel-group=ci;worker_flavor=g4dn.2xlarge;timeout=90m;worker_replicas=2;fips=true;ocm-env=production;multi-az=false
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-435"},
@@ -45,28 +43,22 @@ tests:
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: MSINTEROP
       FIREWATCH_JIRA_API_TOKEN_PATH: /tmp/secrets/jira/access_token_msi
-      OPENSHIFT_VERSION: "4.13"
       OPERATOR1_CONFIG: name=gpu-operator-certified;namespace=nvidia-gpu-operator;source=certified-operators;target-namespaces=nvidia-gpu-operator,
       OPERATOR2_CONFIG: name=servicemeshoperator
       OPERATOR3_CONFIG: name=serverless-operator;namespace=openshift-serverless
       OPERATOR4_CONFIG: name=openshift-pipelines-operator-rh;namespace=openshift-pipelines;channel=latest
       OPERATOR5_CONFIG: name=nfd;namespace=openshift-nfd;target-namespaces=openshift-nfd,
       PARALLEL: "false"
-      REPLICAS: "2"
-      ROSA_LOGIN_ENV: production
     test:
     - ref: addon-tests-rhods
-    workflow: addons-and-operators-aws-rosa
+    workflow: addons-and-operators
 - as: smoke-osd-rhods-addon-baseline-fips
   cron: 0 12 * * 6
   steps:
     cluster_profile: aws-managed-cspi-qe
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
-      API_HOST: production
-      COMPUTE_MACHINE_TYPE: g4dn.2xlarge
-      COMPUTE_NODES: "2"
-      FIPS: "true"
+      CLUSTER1_CONFIG: name=aws-osd-rhods;platform=aws-osd;region=us-east-2;version=4.13;channel-group=ci;worker_flavor=g4dn.2xlarge;timeout=90m;worker_replicas=2;fips=true;ocm-env=production;multi-az=false
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-436"},
@@ -78,9 +70,6 @@ tests:
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: MSINTEROP
       FIREWATCH_JIRA_API_TOKEN_PATH: /tmp/secrets/jira/access_token_msi
-      MULTI_AZ: "false"
-      OCM_LOGIN_ENV: production
-      OPENSHIFT_VERSION: "4.13"
       OPERATOR1_CONFIG: name=gpu-operator-certified;namespace=nvidia-gpu-operator;source=certified-operators;target-namespaces=nvidia-gpu-operator,
       OPERATOR2_CONFIG: name=servicemeshoperator
       OPERATOR3_CONFIG: name=serverless-operator;namespace=openshift-serverless
@@ -89,7 +78,7 @@ tests:
       PARALLEL: "false"
     test:
     - ref: addon-tests-rhods
-    workflow: addons-and-operators-aws-osd
+    workflow: addons-and-operators
 zz_generated_metadata:
   branch: rhods-addon-interop
   org: CSPI-QE
