New layout with new layer names

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -17,6 +17,9 @@ images:
     FROM src
     FROM trilliandb
     COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
+    WORKDIR /go/src/github.com/securesign/trillian
+    ENV PATH=$PATH:/usr/local/go/bin
+    ENV GOPATH=/go
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
