--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-IIB.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-addon-interop__v4.13-IIB.yaml
@@ -31,7 +31,7 @@ tests:
     cluster_profile: aws-managed-cspi-qe
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
-      CLUSTER1_CONFIG: name=rosa-rhods;platform=rosa;region=us-east-2;version=4.13;channel-group=ci;worker_flavor=g4dn.2xlarge;timeout=90m;worker_replicas=2;fips=true;ocm-env=stage;multi-az=false
+      CLUSTER1_CONFIG: name=rosa-rhods;platform=rosa;region=us-east-2;version=4.13;channel-group=candidate;worker_flavor=g4dn.2xlarge;timeout=90m;worker_replicas=2;fips=true;ocm-env=stage;multi-az=false
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-435"},
@@ -58,7 +58,7 @@ tests:
     cluster_profile: aws-managed-cspi-qe
     env:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
-      CLUSTER1_CONFIG: name=rosa-rhods;platform=rosa;region=us-east-2;version=4.13;channel-group=ci;worker_flavor=g4dn.2xlarge;timeout=90m;worker_replicas=2;fips=true;ocm-env=stage;multi-az=false
+      CLUSTER1_CONFIG: name=rosa-rhods;platform=rosa;region=us-east-2;version=4.13;channel-group=candidate;worker_flavor=g4dn.2xlarge;timeout=90m;worker_replicas=2;fips=true;ocm-env=stage;multi-az=false
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-436"},
