New layout with new layer names

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -57,6 +57,8 @@ tests:
   commands: |
     pwd
     ls
+    cd /usr/local/go
+    ls
     go mod vendor
     ./integration/integration_test.sh
   container:
