--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -18,8 +18,8 @@ images:
     RUN pwd
     FROM golang AS golayer
     FROM trilliandb
-    RUN mkdir /usr/local/go
-    COPY --from=golayer /usr/local/go /usr/local/go
+    RUN mkdir /usr/local/go/
+    COPY --from=golayer /usr/local/go/ /usr/local/go/
     COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
     WORKDIR /go/src/github.com/securesign/trillian
     ENV PATH=$PATH:/usr/local/go/bin
