--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -18,6 +18,7 @@ images:
     RUN pwd
     FROM golang AS golayer
     FROM trilliandb
+    USER root
     RUN mkdir /usr/local/go/
     COPY --from=golayer /usr/local/go/ /usr/local/go/
     COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
