--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -63,6 +63,7 @@ tests:
     cd /usr/local/go
     echo $PATH
     ls
+    go env -w GO111MODULE=off
     go mod vendor
     ./integration/integration_test.sh
   container:
