--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13.yaml
@@ -209,6 +209,6 @@ tests:
     - ref: openshift-extended-test
     workflow: cucushift-installer-rehearse-gcp-ipi-ovn-winc
 zz_generated_metadata:
-  branch: release-4.13
-  org: openshift
+  branch: OCP-54741-fix-for-BM-kubevirt
+  org: jechen0648
   repo: openshift-tests-private
