--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -15,7 +15,6 @@ build_root:
 images:
 - dockerfile_literal: |
     FROM src
-    RUN pwd
     FROM golang AS golayer
     FROM trilliandb
     USER root
@@ -27,6 +26,7 @@ images:
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
+    CMD ["mysqld"]
   inputs:
     src:
       as:
