--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -21,12 +21,13 @@ images:
     RUN mkdir /usr/local/go/
     COPY --from=golayer /usr/local/go/ /usr/local/go/
     COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
-    WORKDIR /go/src/github.com/securesign/trillian
     ENV PATH=$PATH:/usr/local/go/bin
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
+    go env -w GO111MODULE=off
     CMD ["mysqld"]
+    WORKDIR /go/src/github.com/securesign/trillian
   inputs:
     src:
       as:
