--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -25,7 +25,8 @@ images:
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
-    CMD ["mysqld"]
+    ENTRYPOINT ["msqld"]
+    CMD [" start"]
     WORKDIR /go/src/github.com/securesign/trillian
   inputs:
     src:
