--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -25,8 +25,7 @@ images:
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
-    ENTRYPOINT ["msqld"]
-    CMD [" start"]
+    EXPOSE 3306 33060
     WORKDIR /go/src/github.com/securesign/trillian
   inputs:
     src:
