--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -58,6 +58,7 @@ resources:
 tests:
 - as: integration
   commands: |
+    mysqld start
     ./integration/integration_test.sh
   container:
     from: src-db
