--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -17,16 +17,16 @@ images:
     FROM src
     FROM golang AS golayer
     FROM trilliandb
+    COPY . . 
     USER root
     RUN mkdir /usr/local/go/
     COPY --from=golayer /usr/local/go/ /usr/local/go/
-    COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
+    COPY --from=src /go/src/github.com/securesign/trillian .
     ENV PATH=$PATH:/usr/local/go/bin
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
     EXPOSE 3306 33060
-    WORKDIR /go/src/github.com/securesign/trillian
   inputs:
     src:
       as:
