--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -17,9 +17,6 @@ images:
     FROM src
     FROM golang AS golayer
     FROM trilliandb
-    COPY . . 
-    #USER root
-    #RUN mkdir /usr/local/go/
     COPY --from=golayer /usr/local/go/ /usr/local/go/
     COPY --from=src /go/src/github.com/securesign/trillian .
     ENV PATH=$PATH:/usr/local/go/bin
@@ -27,6 +24,7 @@ images:
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
     EXPOSE 3306 33060
+    USER root
   inputs:
     src:
       as:
