--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -25,6 +25,7 @@ images:
     ENV MYSQL_DATABASE=test
     EXPOSE 3306 33060
     USER root
+  from: trilliandb
   inputs:
     src:
       as:
@@ -32,9 +33,6 @@ images:
     openshift_release_golang-1.19:
       as:
       - golang
-    trilliandb:
-      as:
-      - trilliandb
   to: src-db
 releases:
   initial:
