--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -55,6 +55,8 @@ tests:
 - as: integration
   commands: |
     echo $MYSQL_USER
+    export mysql_flags="-pzaphod -utest -h 127.0.0.1 -P 3306"
+    ./usr/share/container-scripts/mysql/init/60-load-db.sh
     ./integration/integration_test.sh
   container:
     from: src-db
