--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -18,21 +18,19 @@ images:
     FROM golang AS golayer
     FROM trilliandb
     COPY --from=golayer /usr/local/go/ /usr/local/go/
-    COPY --from=src /go/src/github.com/securesign/trillian .
+    COPY --from=src /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
     ENV PATH=$PATH:/usr/local/go/bin
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
     EXPOSE 3306 33060
-    USER root
-  from: trilliandb
   inputs:
-    src:
-      as:
-      - src
     openshift_release_golang-1.19:
       as:
       - golang
+    src:
+      as:
+      - src
   to: src-db
 releases:
   initial:
@@ -54,12 +52,9 @@ resources:
 tests:
 - as: integration
   commands: |
-    echo $MYSQL_USER
-    export mysql_flags="-pzaphod -utest -h 127.0.0.1 -P 3306"
-    ./usr/share/container-scripts/mysql/init/60-load-db.sh
-    ./integration/integration_test.sh
+    mysql -utest -pzaphod -h 127.0.0.1 -P 3306
   container:
-    from: src-db
+    from: trilliandb
 zz_generated_metadata:
   branch: release-next
   org: securesign
