--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -53,7 +53,7 @@ tests:
   commands: |
     mysql -utest -pzaphod -h 127.0.0.1 -P 3306
   container:
-    from: stable:src-db
+    from: src-db
 zz_generated_metadata:
   branch: release-next
   org: securesign
