--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -15,6 +15,7 @@ build_root:
 images:
 - dockerfile_literal: |
     FROM src AS repo
+    USER root
     FROM trilliandb AS sql
     COPY --from=repo /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
     ENV PATH=$PATH:/usr/local/go/bin
