Adding load db to dockerfile literal

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -23,6 +23,8 @@ images:
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
+    
+    RUN ./usr/share/container-scripts/mysql/init/60-load-db.sh
   from: trilliandb
   inputs:
     src:
@@ -52,7 +54,7 @@ resources:
 tests:
 - as: integration
   commands: |
-    mysql -utest -pzaphod -h 127.0.0.1 -P 3306
+    ./integration/run_integration.sh
   container:
     from: src-db
 zz_generated_metadata:
