--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -23,7 +23,7 @@ images:
     ENV MYSQL_USER=test
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
-    
+    ENV mysql_flags="-pzaphod -utest"
     RUN ./usr/share/container-scripts/mysql/init/60-load-db.sh
   from: trilliandb
   inputs:
