--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -24,7 +24,7 @@ images:
     FROM trilliandb
     COPY --from=golayer /usr/local/go/ /usr/local/go/
     COPY --from=repo /go/src/github.com/securesign/trillian /go/src/github.com/securesign/trillian
-    RUN /usr/sh RUNare/container-scripts/mysql/init/60-load-db.sh
+    RUN /usr/share/container-scripts/mysql/init/60-load-db.sh
   from: trilliandb
   inputs:
     src:
