Attempting to start mysqld in container

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -53,8 +53,9 @@ resources:
 tests:
 - as: integration
   commands: |
+    ./usr/libexec/mysqld start
     cd /go/src/github.com/securesign/trillian
-    ./integration/run_integration.sh
+    ./integration/integration_test.sh
   container:
     from: src-db
 zz_generated_metadata:
