Added correct pathing to start server

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -24,6 +24,7 @@ images:
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
     ENV mysql_flags="-pzaphod -utest"
+    USER root
   from: trilliandb
   inputs:
     src:
@@ -53,8 +54,6 @@ resources:
 tests:
 - as: integration
   commands: |
-    cd /usr/libexec/
-    ./mysqld start
     cd /go/src/github.com/securesign/trillian/
     ./integration/integration_test.sh
   container:
