--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -24,7 +24,8 @@ images:
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
     ENV mysql_flags="-pzaphod -utest"
-    USER root
+    ENTRYPOINT ["container-entrypoint"]
+    CMD ["run-mysqld"]
   from: trilliandb
   inputs:
     src:
