Added entrypoint command

--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -55,6 +55,7 @@ resources:
 tests:
 - as: integration
   commands: |
+    container-entrypoint run-mysqld
     cd /go/src/github.com/securesign/trillian/
     ./integration/integration_test.sh
   container:
