--- a/ci-operator/step-registry/openshift/microshift/e2e/metal-tests/openshift-microshift-e2e-metal-tests-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/e2e/metal-tests/openshift-microshift-e2e-metal-tests-ref.yaml
@@ -1,7 +1,6 @@
 ref:
   as: openshift-microshift-e2e-metal-tests
-  cli: latest
-  from: microshift-test-payload
+  from: tests
   commands: openshift-microshift-e2e-metal-tests-commands.sh
   resources:
     requests:
