--- a/ci-operator/config/ocp-agent-qe/vsphere/ocp-agent-qe-vsphere-openshift-openshift-tests-private-release-4.12__amd64-nightly.yaml
+++ b/ci-operator/config/ocp-agent-qe/vsphere/ocp-agent-qe-vsphere-openshift-openshift-tests-private-release-4.12__amd64-nightly.yaml
@@ -2729,7 +2729,7 @@ tests:
     - chain: openshift-e2e-test-qe
     workflow: cucushift-installer-rehearse-vsphere-upi-disconnecting-network
 zz_generated_metadata:
-  branch: release-4.12
-  org: openshift
-  repo: openshift-tests-private
+  branch: openshift-openshift-tests-private-release-4.12
+  org: ocp-agent-qe
+  repo: vsphere
   variant: amd64-nightly
