--- a/ci-operator/step-registry/openshift/microshift/infra/wait-for-cluster-up-aws/openshift-microshift-infra-wait-for-cluster-up-aws-ref.yaml
+++ b/ci-operator/step-registry/openshift/microshift/infra/wait-for-cluster-up-aws/openshift-microshift-infra-wait-for-cluster-up-aws-ref.yaml
@@ -1,6 +1,6 @@
 ref:
   as: openshift-microshift-infra-wait-for-cluster-up-aws
-  from: microshift-test-payload
+  from: tests
   grace_period: 10m
   commands: openshift-microshift-infra-wait-for-cluster-up-aws-commands.sh
   resources:
