--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__multi-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__multi-nightly.yaml
@@ -283,10 +283,9 @@ tests:
       ADDITIONAL_WORKER_ARCHITECTURE: x86_64
       ADDITIONAL_WORKER_VM_TYPE: n2-standard-4
       COMPUTE_NODE_TYPE: t2a-standard-4
-      E2E_RUN_TAGS: '@heterogeneous and @gcp-ipi and @network-ovnkubernetes and not
-        @fips'
       OCP_ARCH: arm64
       TAG_VERSION: '@4.14'
+      TEST_SCENARIOS: "67013"
     test:
     - ref: ipi-install-heterogeneous
     - chain: openshift-e2e-test-qe
