Add multi variant

--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__multi-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.13__multi-nightly.yaml
@@ -117,6 +117,15 @@ tests:
     test:
     - chain: openshift-e2e-test-qe
     workflow: baremetal-lab-upi
+- as: baremetal-ipi-validate-p1-f14
+  cluster: build05
+  cron: 30 21 5,18 * *
+  steps:
+    cluster_profile: equinix-ocp-metal-qe
+    env:
+      AUX_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+      PROVISIONING_HOST: openshift-qe-bastion.arm.eng.rdu2.redhat.com
+    workflow: baremetal-lab-ipi-validate
 zz_generated_metadata:
   branch: release-4.13
   org: openshift
