--- a/ci-operator/config/quay/quay-tests/quay-quay-tests-master__quay-hypershift-ocp.yaml
+++ b/ci-operator/config/quay/quay-tests/quay-quay-tests-master__quay-hypershift-ocp.yaml
@@ -77,4 +77,4 @@ zz_generated_metadata:
   branch: master
   org: quay
   repo: quay-tests
-  variant: quay39-hypershift-ocp414
+  variant: quay-hypershift-ocp
