--- a/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/xpn/private/cucushift-installer-rehearse-gcp-ipi-xpn-private-workflow.yaml
+++ b/ci-operator/step-registry/cucushift/installer/rehearse/gcp/ipi/xpn/private/cucushift-installer-rehearse-gcp-ipi-xpn-private-workflow.yaml
@@ -14,3 +14,4 @@ workflow:
     `cucushift-installer-rehearse-gcp-ipi-xpn-private-provision` and `cucushift-installer-rehearse-gcp-ipi-private-deprovision` chains to 
     allow other workflows to mimic and extend this base workflow without 
     a need to backport changes.
+    test
