update quay test 3.7 and 3.8 on OCP 4.13

--- a/ci-operator/config/quay/quay-tests/quay-quay-tests-master__ocp-413-quay.yaml
+++ b/ci-operator/config/quay/quay-tests/quay-quay-tests-master__ocp-413-quay.yaml
@@ -43,8 +43,40 @@ tests:
     - ref: quay-tests-qbo-qe-test
     - ref: quay-tests-cso-qe-test
     workflow: cucushift-installer-rehearse-aws-ipi
+- as: quay-e2e-tests-ocp413-quay38
+  cron: 0 12 * * 3
+  steps:
+    cluster_profile: aws-qe
+    env:
+      BASE_DOMAIN: qe.devcluster.openshift.com
+      COMPUTE_NODE_TYPE: m5.2xlarge
+      CSO_CHANNEL: stable-3.8
+      ODF_OPERATOR_CHANNEL: stable-4.12
+      QBO_CHANNEL: stable-3.8
+      QUAY_OPERATOR_CHANNEL: stable-3.8
+    test:
+    - chain: quay-tests-quay-e2e-test
+    - ref: quay-tests-qbo-qe-test
+    - ref: quay-tests-cso-qe-test
+    workflow: cucushift-installer-rehearse-aws-ipi
+- as: quay-e2e-tests-ocp413-quay37
+  cron: 0 12 * * 4
+  steps:
+    cluster_profile: aws-qe
+    env:
+      BASE_DOMAIN: qe.devcluster.openshift.com
+      COMPUTE_NODE_TYPE: m5.2xlarge
+      CSO_CHANNEL: stable-3.7
+      ODF_OPERATOR_CHANNEL: stable-4.12
+      QBO_CHANNEL: stable-3.7
+      QUAY_OPERATOR_CHANNEL: stable-3.7
+    test:
+    - chain: quay-tests-quay-e2e-test
+    - ref: quay-tests-qbo-qe-test
+    - ref: quay-tests-cso-qe-test
+    workflow: cucushift-installer-rehearse-aws-ipi
 zz_generated_metadata:
   branch: master
   org: quay
   repo: quay-tests
-  variant: ocp-413-quay39
+  variant: ocp-413-quay
