--- a/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-periodics.yaml
+++ b/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-periodics.yaml
@@ -2896,7 +2896,7 @@ periodics:
         secretName: result-aggregator
 - agent: kubernetes
   cluster: build03
-  cron: 0 12 * * 6
+  cron: 0 12 * * 0
   decorate: true
   decoration_config:
     skip_cloning: true
@@ -2907,12 +2907,12 @@ periodics:
     repo: ocp-qe-perfscale-ci
   labels:
     ci-operator.openshift.io/cloud: aws
-    ci-operator.openshift.io/cloud-cluster-profile: aws-perfscale
+    ci-operator.openshift.io/cloud-cluster-profile: aws-perfscale-qe
     ci-operator.openshift.io/variant: rosa-4.14-nightly
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-nightly-perfscale-rosa-multiaz-ci-tests-medium-scale-kube-burner
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-nightly-perfscale-rosa-multiaz-cluster-density-v2-24nodes-periodic
   spec:
     containers:
     - args:
@@ -2921,8 +2921,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/perfscale-rosa-multiaz-ci-tests-medium-scale-kube-burner-cluster-profile
-      - --target=perfscale-rosa-multiaz-ci-tests-medium-scale-kube-burner
+      - --secret-dir=/usr/local/perfscale-rosa-multiaz-cluster-density-v2-24nodes-periodic-cluster-profile
+      - --target=perfscale-rosa-multiaz-cluster-density-v2-24nodes-periodic
       - --variant=rosa-4.14-nightly
       command:
       - ci-operator
@@ -2939,7 +2939,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/perfscale-rosa-multiaz-ci-tests-medium-scale-kube-burner-cluster-profile
+      - mountPath: /usr/local/perfscale-rosa-multiaz-cluster-density-v2-24nodes-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -2963,7 +2963,7 @@ periodics:
         secretName: ci-pull-credentials
     - name: cluster-profile
       secret:
-        secretName: cluster-secrets-aws-perfscale
+        secretName: cluster-secrets-aws-perfscale-qe
     - name: pull-secret
       secret:
         secretName: registry-pull-credentials
