--- a/ci-operator/step-registry/ipi/conf/aws/ipi-conf-aws-ref.yaml
+++ b/ci-operator/step-registry/ipi/conf/aws/ipi-conf-aws-ref.yaml
@@ -1,7 +1,7 @@
 ref:
   as: ipi-conf-aws
   from_image:
-    namespace: ocp
+    namespace: ocp-arm64
     name: "4.12"
     tag: upi-installer
   commands: ipi-conf-aws-commands.sh
