--- a/ci-operator/step-registry/gather/aws-console/gather-aws-console-ref.yaml
+++ b/ci-operator/step-registry/gather/aws-console/gather-aws-console-ref.yaml
@@ -2,7 +2,7 @@ ref:
   as: gather-aws-console
   optional_on_success: true
   from_image:
-    namespace: ocp
+    namespace: ocp-arm64
     name: "4.5"
     tag: upi-installer
   grace_period: 10m
