--- a/ci-operator/step-registry/ipi/conf/telemetry/ipi-conf-telemetry-ref.yaml
+++ b/ci-operator/step-registry/ipi/conf/telemetry/ipi-conf-telemetry-ref.yaml
@@ -1,7 +1,7 @@
 ref:
   as: ipi-conf-telemetry
   from_image:
-    namespace: ocp
+    namespace: ocp-arm64
     name: "4.12"
     tag: upi-installer
   commands: ipi-conf-telemetry-commands.sh
