--- a/ci-operator/step-registry/ipi/install/monitoringpvc/ipi-install-monitoringpvc-ref.yaml
+++ b/ci-operator/step-registry/ipi/install/monitoringpvc/ipi-install-monitoringpvc-ref.yaml
@@ -1,7 +1,7 @@
 ref:
   as: ipi-install-monitoringpvc
   from_image:
-    namespace: ocp
+    namespace: ocp-arm64
     name: "4.12"
     tag: upi-installer
   commands: ipi-install-monitoringpvc-commands.sh
