--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -25,9 +25,7 @@ images:
     ENV MYSQL_PASSWORD=zaphod
     ENV MYSQL_DATABASE=test
     ENV mysql_flags="-pzaphod -utest"
-    RUN systemctl enable mariadb
     USER 27
-  from: trilliandb
   inputs:
     openshift_release_golang-1.19:
       as:
@@ -35,6 +33,9 @@ images:
     src:
       as:
       - src
+    trilliandb:
+      as:
+      - trilliandb
   to: src-db
 releases:
   initial:
