--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -14,6 +14,7 @@ build_root:
     tag: rhel-9-golang-1.20-openshift-4.14
 images:
 - dockerfile_literal: |
+    FROM registry.access.redhat.com/ubi8
     FROM src AS repo
     FROM golang AS golayer
     USER root
@@ -57,6 +58,7 @@ resources:
 tests:
 - as: integration
   commands: |
+    mysql -utest -pzaphod -h 127.0.0.1 -P3306
     cd /go/src/github.com/securesign/trillian/
     ./integration/integration_test.sh
   container:
