--- a/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
+++ b/ci-operator/config/securesign/trillian/securesign-trillian-release-next.yaml
@@ -58,7 +58,7 @@ resources:
 tests:
 - as: integration
   commands: |
-    mysql -utest -pzaphod -h 127.0.0.1 -P3306
+    systemctl restart mariadb
     cd /go/src/github.com/securesign/trillian/
     ./integration/integration_test.sh
   container:
